Glycan motif annotation of glycans

--- a/07_lmpc-infection-mouse-glycowork.ipynb
+++ b/07_lmpc-infection-mouse-glycowork.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "5b0ab44c-7de3-4dc7-9992-d8bdbc502e7a",
    "metadata": {
     "tags": []
@@ -26,13 +26,14 @@
     "from glycowork.motif.analysis import get_pca\n",
     "from glycowork.motif.analysis import get_volcano\n",
     "from glycowork.motif.annotate import quantify_motifs\n",
+    "from glycowork.motif.annotate import annotate_dataset\n",
     "from glycowork.network.biosynthesis import *\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "ba04dd5d",
    "metadata": {
     "tags": []
@@ -44,7 +45,7 @@
        "'C:\\\\Users\\\\xerhma\\\\Glycans\\\\lmpc-infection-rnaseq'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "dd55e669-5a0f-4ba8-b19b-f30aee291026",
    "metadata": {
     "tags": []
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "9a5c17bd-6078-4587-ac7c-53dce86fe5c9",
    "metadata": {},
    "outputs": [],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "79450d95-2e60-4687-b149-b9b931e8b9ba",
    "metadata": {
     "tags": []
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "96c95f92-f9fb-45de-b496-35e91ca3af73",
    "metadata": {},
    "outputs": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "36a5363c-e316-4b52-9a99-74f454aa424b",
    "metadata": {},
    "outputs": [],
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "6d5585ee-3677-47b2-8418-01dde4a4c361",
    "metadata": {},
    "outputs": [
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "2b8d1a29-a7ed-4369-8717-0e0dc3df069a",
    "metadata": {},
    "outputs": [],
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "0b06a16a-f07a-4137-a29c-737c091d7cdd",
    "metadata": {},
    "outputs": [
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "91a0de02-424e-4814-b0bd-78679f757389",
    "metadata": {},
    "outputs": [],
@@ -380,7 +381,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
+   "id": "718dc0c0-1c29-41c4-ba54-85f0a42bcf9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Annotate glycan dataset with terminal motifs\n",
+    "glycans_terminal_motifs_annotation = annotate_dataset (glycans = df_canonicalized_mouse_minimal_sample_col_all.iloc[:, 0].values.tolist(), \n",
+    "                  motifs=None, \n",
+    "                  feature_set=['terminal1',\n",
+    "                               'terminal2',\n",
+    "                               'terminal3'],\n",
+    "                  termini_list=[], \n",
+    "                  condense=True, \n",
+    "                  custom_motifs=[])\n",
+    "\n",
+    "glycans_terminal_motifs_annotation.to_excel('.\\\\Python_output_files\\\\Tables\\\\glycans_terminal_motifs_annotation.xlsx', \n",
+    "                                    index=True,\n",
+    "                                   index_label = 'Canonicalized_Structure')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a87772e4-54c4-42be-bfa9-b20610ea95cf",
    "metadata": {},
    "outputs": [],
@@ -391,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "1e547c3c-4dfb-453f-b374-f6fd905d28cf",
    "metadata": {},
    "outputs": [],
@@ -409,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "01a4f2e9-fa01-41a3-ac96-14271c7a720d",
    "metadata": {},
    "outputs": [],
@@ -422,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "8daaa025-2b3f-4456-83e7-df87574e11ee",
    "metadata": {},
    "outputs": [],
