Further glycan investigation

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b136666b-c853-4101-b300-927a67522053",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5f6a9c93-6d09-4b02-9bea-97f1351520e4",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "id": "9f2dae47-ac43-49ca-b1b8-607371357a57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
+       "     width=\"500\" height=\"310\" viewBox=\"-450.0 -205.0 500 310\">\n",
+       "<defs>\n",
+       "<path d=\"M-100,0 L0,-50.0\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R0\" />\n",
+       "<path d=\"M-200,0 L-100,0\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R1\" />\n",
+       "<path d=\"M-300,0 L-200,0\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R2\" />\n",
+       "<path d=\"M-400,0 L-300,0\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R3\" />\n",
+       "<path d=\"M-200,-100 L-100,-100\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R4\" />\n",
+       "<path d=\"M-300,-100 L-200,-100\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R5\" />\n",
+       "<path d=\"M-100,-100 L0,-50.0\" stroke-width=\"4.0\" stroke=\"#000000\" id=\"zrXQQm3R6\" />\n",
+       "<path d=\"M-50,-25.0 L50,-25.0\" stroke-width=\"0\" id=\"zrXQQm3R7\" />\n",
+       "<path d=\"M-50,-50.0 L50,-50.0\" stroke-width=\"0\" id=\"zrXQQm3R8\" />\n",
+       "<path d=\"M-150,25.0 L-50,25.0\" stroke-width=\"0\" id=\"zrXQQm3R9\" />\n",
+       "<path d=\"M-150,0 L-50,0\" stroke-width=\"0\" id=\"zrXQQm3R10\" />\n",
+       "<path d=\"M-250,25.0 L-150,25.0\" stroke-width=\"0\" id=\"zrXQQm3R11\" />\n",
+       "<path d=\"M-250,0 L-150,0\" stroke-width=\"0\" id=\"zrXQQm3R12\" />\n",
+       "<path d=\"M-350,25.0 L-250,25.0\" stroke-width=\"0\" id=\"zrXQQm3R13\" />\n",
+       "<path d=\"M-350,0 L-250,0\" stroke-width=\"0\" id=\"zrXQQm3R14\" />\n",
+       "<path d=\"M-450,25.0 L-350,25.0\" stroke-width=\"0\" id=\"zrXQQm3R15\" />\n",
+       "<path d=\"M-450,0 L-350,0\" stroke-width=\"0\" id=\"zrXQQm3R16\" />\n",
+       "<path d=\"M-150,-75.0 L-50,-75.0\" stroke-width=\"0\" id=\"zrXQQm3R17\" />\n",
+       "<path d=\"M-150,-100 L-50,-100\" stroke-width=\"0\" id=\"zrXQQm3R18\" />\n",
+       "<path d=\"M-250,-75.0 L-150,-75.0\" stroke-width=\"0\" id=\"zrXQQm3R19\" />\n",
+       "<path d=\"M-250,-100 L-150,-100\" stroke-width=\"0\" id=\"zrXQQm3R20\" />\n",
+       "<path d=\"M-350,-75.0 L-250,-75.0\" stroke-width=\"0\" id=\"zrXQQm3R21\" />\n",
+       "<path d=\"M-350,-100 L-250,-100\" stroke-width=\"0\" id=\"zrXQQm3R22\" />\n",
+       "</defs>\n",
+       "<g transform=\"rotate(0 -200.0 -50.0)\">\n",
+       "<use xlink:href=\"#zrXQQm3R0\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R0\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">β 3</tspan>\n",
+       "</textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R1\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R1\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">β 3</tspan>\n",
+       "</textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R2\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R2\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">?</tspan>\n",
+       "</textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R3\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R3\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">α 4</tspan>\n",
+       "</textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R4\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R4\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">β 4</tspan>\n",
+       "</textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R5\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R5\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">α 4</tspan>\n",
+       "</textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R6\" />\n",
+       "<text font-size=\"20.0\" text-anchor=\"middle\" fill=\"#000000\" valign=\"middle\"><textPath xlink:href=\"#zrXQQm3R6\" startOffset=\"50%\">\n",
+       "<tspan dy=\"-0.5em\">β 6</tspan>\n",
+       "</textPath></text>\n",
+       "<rect x=\"-25.0\" y=\"-75.0\" width=\"50\" height=\"50\" fill=\"#FCC326\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R7\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R7\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R8\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R8\" startOffset=\"50%\"></textPath></text>\n",
+       "<circle cx=\"-100\" cy=\"0\" r=\"25.0\" fill=\"#FCC326\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R9\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R9\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R10\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R10\" startOffset=\"50%\"></textPath></text>\n",
+       "<rect x=\"-225.0\" y=\"-25.0\" width=\"50\" height=\"50\" fill=\"#0385AE\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R11\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R11\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R12\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R12\" startOffset=\"50%\"></textPath></text>\n",
+       "<circle cx=\"-300\" cy=\"0\" r=\"25.0\" fill=\"#FCC326\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R13\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R13\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R14\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R14\" startOffset=\"50%\"></textPath></text>\n",
+       "<rect x=\"-425.0\" y=\"-25.0\" width=\"50\" height=\"50\" fill=\"#0385AE\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R15\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R15\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R16\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R16\" startOffset=\"50%\"></textPath></text>\n",
+       "<rect x=\"-125.0\" y=\"-125.0\" width=\"50\" height=\"50\" fill=\"#0385AE\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R17\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R17\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R18\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R18\" startOffset=\"50%\"></textPath></text>\n",
+       "<circle cx=\"-200\" cy=\"-100\" r=\"25.0\" fill=\"#FCC326\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R19\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R19\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R20\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R20\" startOffset=\"50%\"></textPath></text>\n",
+       "<rect x=\"-325.0\" y=\"-125.0\" width=\"50\" height=\"50\" fill=\"#0385AE\" stroke-width=\"2.0\" stroke=\"#000000\" />\n",
+       "<use xlink:href=\"#zrXQQm3R21\" />\n",
+       "<text font-size=\"17.5\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R21\" startOffset=\"50%\"></textPath></text>\n",
+       "<use xlink:href=\"#zrXQQm3R22\" />\n",
+       "<text font-size=\"15.0\" fill=\"#000000\" text-anchor=\"middle\"><textPath xlink:href=\"#zrXQQm3R22\" startOffset=\"50%\"></textPath></text>\n",
+       "</g>\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<drawsvg.drawing.Drawing at 0x2433927d550>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GlycoDraw(\"GlcNAc(a1-4)Gal(?1-?)GlcNAc(b1-3)Gal(b1-3)[GlcNAc(a1-4)Gal(b1-4)GlcNAc(b1-6)]GalNAc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "57a8c60e-88ac-4da9-9843-dbf4733574f8",
    "metadata": {},
    "outputs": [
